--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "API_ID" : "22120145",
-    "API_HASH" : "17020fdecdc16cb37c56a8e2e482b31d",
-    "PHONE_NUMBER" : "+998994612517",
+    "API_ID" : "---",
+    "API_HASH" : "---",
+    "PHONE_NUMBER" : "---",
     "SESSION_NAME" : "my_tg_session",
-    "API_KEY": "2848340d4e894d99b98181838242808",
-    "CITY": "Tashkent"
+    "API_KEY": "---",
+    "CITY": "---"
 }
